This is my third commit

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewmodel"
-            type="com.example.at1.uicomponent.FirstViewModel" />
+            type="com.example.at1.dump.FirstViewModel" />
 
     </data>
 
