--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewmodel"
-            type="com.example.at1.uicomponent.SecondViewModel" />
+            type="com.example.at1.dump.SecondViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
