--- a/app/src/main/res/layout/fragment_main_dashboard.xml
+++ b/app/src/main/res/layout/fragment_main_dashboard.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".recyclerview.main.MainDashboardFragment">
 
     <data>
         <variable
             name="viewModel"
             type="com.example.at1.recyclerview.main.MainDashboardViewModel" />
-        
+
+        <variable
+            name="mainDashboardAdapter"
+            type="com.example.at1.recyclerview.main.adapters.MainDashboardAdapter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,7 +21,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:setMyAdapter="@{mainDashboardAdapter}"
+            app:submitMyList="@{viewModel.dashBoardItemList}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
